adjust layout of dropdown and  focusblur effect

--- a/src/app/features/orders/shared/home-payment/home-payment.component.html
+++ b/src/app/features/orders/shared/home-payment/home-payment.component.html
@@ -23,6 +23,7 @@
                 [inputGroup]="true"
                 [hideLabel]="true"
                 [vertCLass]="'col-12'"
+                [enableFocusBlurTracking]="true"
                 (focus)="setActiveInput(method.focusKey, inputRef)"
                 (input)="setValueFromInputEvent(method.focusKey, $event)"
               >
