--- a/src/app/shared/components/dropdown/dropdown.component.html
+++ b/src/app/shared/components/dropdown/dropdown.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex flex-column">
-  <div class="pb-1" *ngIf="title">
-  <span class="small">{{title | translate}}</span>
+  <div class="pb-1" *ngIf="DropdownComponentData.title">
+  <span class="small">{{DropdownComponentData.title | translate}}</span>
 </div>
-<div class="btn-group " [class.border]="title">
+<div class="btn-group " [class.border]="DropdownComponentData.title">
             <button
               class="btn rounded-0 border-0 small dropdown-toggle border-end d-flex justify-content-between align-items-center py-1 px-2"
-              [class.border-end-0]="title || noBorder"
+              [class.border-end-0]="DropdownComponentData.title || DropdownComponentData.noBorder"
               type="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -13,17 +13,17 @@
              <div class="d-flex align-items-center">
               <ng-content #name></ng-content>
               <span class="fs-verySmall text-muted text-start">
-                {{ dropdownSelection | translate }}
+                {{ DropdownComponentData.dropdownSelection | translate }}
               </span>
              </div>
             </button>
 
             <ul class="dropdown-menu w-100">
-              <li *ngIf="optionsArray.length === 0">
+              <li *ngIf="DropdownComponentData.optionsArray.length === 0">
                 <a class="dropdown-item fs-verySmall">{{'No Categories' | translate}}</a>
               </li>
-              <li *ngFor="let option of optionsArray" (click)="selectOption(option)">
-                <a class="dropdown-item fs-verySmall">{{( option[key] || option) |translate }}</a>
+              <li *ngFor="let option of DropdownComponentData.optionsArray" (click)="selectOption(option)">
+                <a class="dropdown-item fs-verySmall">{{( option[DropdownComponentData.key] || option) |translate }}</a>
               </li>
             </ul>
   </div>
