--- a/src/app/features/orders/shared/order-item/order-item.component.html
+++ b/src/app/features/orders/shared/order-item/order-item.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid">
   <div class="d-flex align-items-center">
-     <app-input-checkbox  [value]="order.code" [id]="order.code" (checked)="getOrderCode($event)"></app-input-checkbox>
+     <app-input-checkbox   [InputCheckboxComponentData]="{ value:order.code,  id:order.code, label:''}"
+      (checked)="getOrderCode($event)">
+     </app-input-checkbox>
   <div class="row align-items-center flex-grow-1" (click)="showOrder(order.id)">
     <div class="col-8 col-md-6 col-lg-7 col-xl-8  text-start">
        <app-client-info [order]=order [additionalInfo]="order.code" [flexGrow]="true" (checkedItemCode)="getOrderCode($event)">
