update sales person into one input
update all components that related on it

--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -22,8 +22,14 @@
     </li>
   </ul>
   </div>
-  <app-nav-sales-person [isCollapsed]="isCollapsed"  [personImage]="personImage" [salesPersonName]="salesPersonName">
-  </app-nav-sales-person>
+  <app-nav-sales-person [NavSalesPersonComponent]="
+        {
+        isCollapsed:isCollapsed,
+        personImage:personImage,
+        salesPersonName:salesPersonName
+      }"
+    >
+</app-nav-sales-person>
  </div>
  </div>
 </div>
