--- a/src/app/shared/components/nav-sales-person/nav-sales-person.component.html
+++ b/src/app/shared/components/nav-sales-person/nav-sales-person.component.html
@@ -1,16 +1,16 @@
  <div class="salesPerson  pt-2">
     <div class="d-flex align-items-center  p-3 rounded rounded-4 hover-bg "
-     [class.justify-content-center]="isCollapsed"
+     [class.justify-content-center]="NavSalesPersonComponent.isCollapsed"
       routerLink="SalesPerson" routerLinkActive="router-link-active">
-      <img [src]="'assets/images/'+personImage"   alt="sales person Image" width="40px;" height="40px" class="rounded rounded-circle ">
-      <div [class.d-none]="isCollapsed" class="ps-2  flex-grow-1">
+      <img [src]="'assets/images/'+NavSalesPersonComponent.personImage"   alt="sales person Image" width="40px;" height="40px" class="rounded rounded-circle ">
+      <div [class.d-none]="NavSalesPersonComponent.isCollapsed" class="ps-2  flex-grow-1">
         <div class="d-flex align-item-center justify-content-between">
            <span class="fs-verySmall">{{'Welcome Back' | translate}}👋 </span>
            <span class="arrowIcon">
                <i class="fa-solid fa-chevron-right small"></i>
            </span>
         </div>
-         <span class="small">{{salesPersonName}}</span>
+         <span class="small">{{NavSalesPersonComponent.salesPersonName}}</span>
       </div>
     </div>
   </div>
