update popscreen to use single input and update all dependent components

--- a/src/app/features/orders/add-in-voice-new-customer/add-in-voice-new-customer.component.html
+++ b/src/app/features/orders/add-in-voice-new-customer/add-in-voice-new-customer.component.html
@@ -1,10 +1,11 @@
 <app-pop-screen
-  [headerLabel]="'Add Customer' | translate"
-  btnLabel="Done"
+ [PopScreenComponentData]="{
+      headerLabel:'Add Customer',
+      btnLabel:'Done',
+      hideCancalBtn:true
+    }"
   (doneChange)="done()"
   (closeChange)="close()"
-  [hideCancalBtn]="true"
-
 >
 <div class="bg-white p-4">
 <app-input [id]="'customerName'"
