--- a/src/app/features/products/components/product-details-pop/product-details-pop.component.html
+++ b/src/app/features/products/components/product-details-pop/product-details-pop.component.html
@@ -1,6 +1,9 @@
 <app-pop-screen
-  [headerLabel]="'Product Details'"
-  btnLabel="Save Product Details"
+   [PopScreenComponentData]="{
+  headerLabel:'Product Details',
+  btnLabel:'Save Product Details',
+  hideCancalBtn:false
+ }"
   (closeChange)="closeProductPopscreen()"
   (doneChange)="saveProductDetails()"
   #productInfo
