--- a/src/app/shared/components/pop-screen/pop-screen.component.html
+++ b/src/app/shared/components/pop-screen/pop-screen.component.html
@@ -1,19 +1,19 @@
 <div class="popScreenContainer" #popScreen>
   <div class="popScreenContent">
     <div class="header bg-semi-dark d-flex align-items-center text-white rounded-top-3 justify-content-between py-2 px-3">
-      <span class="small">{{headerLabel | translate}}</span>
+      <span class="small">{{PopScreenComponentData.headerLabel | translate}}</span>
       <i class="fa-solid fa-xmark" (click)="togglePopScreen('close')"></i>
     </div>
 
     <ng-content #name></ng-content>
 
     <div class="footer d-flex py-2 px-3 align-items-center bg-second rounded-bottom-3"
-      [class.justify-content-between]="!hideCancalBtn"
-      [class.justify-content-end]="hideCancalBtn">
+      [class.justify-content-between]="!PopScreenComponentData.hideCancalBtn"
+      [class.justify-content-end]="PopScreenComponentData.hideCancalBtn">
       <span class="p-2 rounded rouned-3 fs-verySmall bg-secondary text-light"
-        [class.d-none]="hideCancalBtn"
-        (click)="togglePopScreen('close')" *ngIf="!hideCancalBtn">{{'Cancal' | translate | titlecase}}</span>
-      <span class="p-2 rounded rouned-3 fs-verySmall bg-semi-dark text-light" (click)="done()">{{btnLabel | translate}}</span>
+        [class.d-none]="PopScreenComponentData.hideCancalBtn"
+        (click)="togglePopScreen('close')" *ngIf="!PopScreenComponentData.hideCancalBtn">{{'Cancal' | translate | titlecase}}</span>
+      <span class="p-2 rounded rouned-3 fs-verySmall bg-semi-dark text-light" (click)="done()">{{PopScreenComponentData.btnLabel | translate}}</span>
     </div>
   </div>
 </div>
